[package]
edition = "2018"
name = "otop"
version = "0.5.1"
authors = ["rigma <rigbuntu@gmail.com>"]
license = "MIT/Apache-2.0"
description = "OTP password generation utilities in pure Rust"
repository = "https://github.com/rigma/otop.git"

[dependencies]
data-encoding = "2.1.2"
hmac = "0.7.1"
sha-1 = "0.8.1"
sha2 = "0.8.0"
url = "1.7.2"

[features]
default = ["sha1", "sha256", "sha512"]
sha1 = []
sha256 = []
sha512 = []
